# RPlace

./: .gitignore  Cargo.toml  README.md  ex1.txt  example.rs  example.txt  include.txt  lua_test.txt  mvctest.txt  out.txt  output.txt  package_manager_api.md  placeplace copy.txt  placeplace.txt  todos.txt  unitxt.txt
rplace/: Cargo.toml  build.sh  ex1.txt  lua_test.txt  out.txt  outa.txt  rplace.toml  todos.txt
rplace/doc/: Lang.drawio
rplace/examples/: derive.txt  example copy.txt  mvctest.txt  package.toml  to_derive.txt
rplace/examples/folder/: b.txt
rplace/examples/import/: include_a.txt  include_b.txt
rplace/src/: constants.rs  data_stream.rs  lexer.rs  main.rs  output_stream.rs  parser.rs  structs.rs
rplace/src/config/: config.rs
rplace/src/derive/: deriver.rs  options_map.rs
rplace/src/lua/: lua.rs  lua_call_map.rs  lua_engine.rs  mod.rs
rplace/src/options/: var_options.rs
rplace/src/package_manager/: mod.rs  package_data.rs  package_load.rs  project_create.rs
rplace/src/run/: mod.rs  run_options.rs
rplace/src/term/: terminal_handler.rs
rplace/src/writer/: writer.rs  writer_structs.rs
rplace_package_manager_api/rplace_package_manager_api/: .env  Cargo.toml  database.db  test_loggin_db.db  test_new_user_db.db
rplace_package_manager_api/rplace_package_manager_api/db/: file_create_repeated_hash.db  file_create_repeated_hash_success.db  file_created_success.db  file_created_unauthorized.db  file_created_wrong_registry_id.db  package_create_same_name_fail.db  package_create_success.db  package_create_unauthorized.db  package_version_create_repeated_version.db  package_version_create_success.db  package_version_create_unauthorized.db  test_get_package_file_success.db  test_initial_no_version.db  test_initial_no_version_fail.db  test_initial_package.db  test_loggin_db_success  test_loggin_failure_db_email.db  test_loggin_failure_db_password.db  test_new_user_db.db
rplace_package_manager_api/rplace_package_manager_api/migrations/: 20260715153053_init.sql
rplace_package_manager_api/rplace_package_manager_api/src/: app.rs  constants.rs  lib.rs  main.rs
rplace_package_manager_api/rplace_package_manager_api/tests/: create.rs  fetch.rs  users_and_auth.rs
(+87 files in other folders)
